@@ -98,6 +98,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|math
+operator|.
+name|BigDecimal
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|math
+operator|.
+name|BigInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|sql
 operator|.
 name|*
@@ -1878,21 +1898,54 @@ operator|!
 name|convertType
 condition|)
 block|{
-comment|// Use underlying database's type information
-name|result
-operator|.
-name|put
-argument_list|(
-name|colName
-argument_list|,
+comment|// Use underlying database's type information except for BigDecimal and BigInteger
+comment|// which cannot be serialized by JavaBin/XML. See SOLR-6165
+name|Object
+name|value
+init|=
 name|resultSet
 operator|.
 name|getObject
 argument_list|(
 name|colName
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|value
+operator|instanceof
+name|BigDecimal
+operator|||
+name|value
+operator|instanceof
+name|BigInteger
+condition|)
+block|{
+name|result
+operator|.
+name|put
+argument_list|(
+name|colName
+argument_list|,
+name|value
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|result
+operator|.
+name|put
+argument_list|(
+name|colName
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
 continue|continue;
 block|}
 name|Integer
